2009-05-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use name.utf-8 and path.utf-8 key in higher priority than name and
	path key respectively when persing .torrent file.
	* src/BtContext.cc
	* src/BtContext.h
	* src/DefaultBtContext.cc
	* test/DefaultBtContextTest.cc
	* test/utf8.torrent

2009-05-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added --xml-rpc-max-request-size option to limit the size of
	XML-RPC request.
	
2009-05-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented XML-RPC API in man page.
	* doc/aria2c.1.txt

2009-05-24  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed g++-4.4 compiler warning: dereferencing type-punned pointer
	will break strict-aliasing rules
	* src/PeerConnection.cc
	* test/DHTRoutingTableSerializerTest.cc

2009-05-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed PKG_CONFIG variable in sqlite3.m4, which conflicts the
	variable in pkg.m4. Use PKG_CHECK_MODULES instead of hand-crafted
	scripts. Renamed SQLITE3_CPPFLAGS as SQLITE3_CFLAGS since
	PKG_CHECK_MODULES macro uses latter name.	
	* m4/sqlite3.m4
	* src/Makefile.am
	* test/Makefile.am

2009-05-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed typo
	* configure.ac

2009-05-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Since upcoming libgnutls 2.8 doesn't have libgnutls-config, Check
	presence of libgnutls using pkg-config first. If it fails, fall
	back to old macro libgnutls.m4.
	* configure.ac

2009-05-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use s itself instead of !s.bad()
	* src/CookieStorage.cc

2009-05-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented --on-download-* option and --save-cookies option in man
	page.	
	* doc/aria2c.1.txt

2009-05-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Set possible values for --load-cookie option to "/path/to/file".
	* src/OptionHandlerFactory.cc
