@@ -71,6 +71,37 @@ private:
 
   Logger* _logger;
 
+  static const std::string C_NAME;
+
+  static const std::string C_NAME_UTF8;
+
+  static const std::string C_FILES;
+
+  static const std::string C_LENGTH;
+
+  static const std::string C_PATH;
+
+  static const std::string C_PATH_UTF8;
+
+  static const std::string C_INFO;
+
+  static const std::string C_PIECES;
+
+  static const std::string C_PIECE_LENGTH;
+
+  static const std::string C_PRIVATE;
+
+  // This is just a string "1". Used as a value of "private" flag.
+  static const std::string C_PRIVATE_ON;
+
+  static const std::string C_URL_LIST;
+
+  static const std::string C_ANNOUNCE;
+
+  static const std::string C_ANNOUNCE_LIST;
+
+  static const std::string C_NODES;
+
   void clear();
   void extractPieceHash(const std::string& hashData, size_t hashLength);
   void extractFileEntries(const BDE& infoDic,
